Update src/test/java/com/thealgorithms/strings/LetterCombinationsOfPhoneNumberTest.java
Co-authored-by: Piotr Idzik <65706193+vil02@users.noreply.github.com>